# foo

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  absl-setup.cc  bitset.hh  find-tty.c  keyecho.cc  log.hh  main.cc  outcome.hh  outcome_test.cc  persistent-rbtree.hh  py.cc  serde.hh  serde_test.cc  t2d.cc  termio-select.cc  tty_device.c  tty_device.h  version.cc.in  version.hh
